--- a/themes/usercenter/layouts/index.html
+++ b/themes/usercenter/layouts/index.html
@@ -32,7 +32,7 @@
                         <h3><span class="material-icons-round">link</span> 账号绑定</h3>
                     </div>
                     <div class="card-body">
-                        <p class="text-secondary">绑定后可直接使用第三方账号登录。</p>
+                        <p class="text-secondary">绑定后可使用第三方账号登录。注意：社交平台需与账号邮箱一致才能完成绑定。</p>
                         <div class="social-list">
                             <div class="social-item" id="bind-google">
                                 <div class="social-info">
@@ -90,7 +90,7 @@
                         <h3><span class="material-icons-round">email</span> 修改邮箱</h3>
                     </div>
                     <div class="card-body">
-                        <p class="text-secondary">修改后需要去新邮箱点击验证链接。</p>
+                        <p class="text-secondary">请注意：更换邮箱需要同时在新旧邮箱点击验证链接完成操作确认。</p>
                         <form id="form-change-email">
                             <div class="input-group">
                                 <input type="email" id="new-email" required placeholder=" ">
