--- a/themes/usercenter/layouts/partials/header.html
+++ b/themes/usercenter/layouts/partials/header.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ .Title }} - {{ .Site.Title }}</title>
+    {{ if eq .Title .Site.Title }}
+        <title>账号设置 | {{ .Site.Title }}</title>
+        <meta name="description" content="{{ $.Site.Params.description }}">
+    {{ else }}
+        <title>{{ .Title }} - {{ .Site.Title }}</title>
+        <meta name="description" content="{{ .Params.description }}">
+    {{ end }}
     <meta name="author" content="{{ $.Site.Params.author }}" />
     <meta name="copyright" content="{{ $.Site.Params.author }}" />
     <meta name="image" content="{{ absURL $.Site.Params.images.favicon }}">
-    <meta name="description" content="{{ .Params.description }}">
+    <link rel="icon" type="image/png" href="{{ absURL $.Site.Params.images.favicon }}">
     <link href="https://fonts.cat.net/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="https://fonts.cat.net/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
